metadata/force-app/main/default/objects/CustomName_RmvFV__c/CustomName_RmvFV__c.object-meta.xml
<CustomObject>
    <description>Description_UNqRH</description>
    <label>CustomLabel_PTPnH</label>
    <nameField>
        <label>CustomLabel_PTPnH</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PTPnHs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>