metadata/force-app/main/default/objects/CustomName_RmvFV__c/fields/CustomField_eLInk__c.field-meta.xml
<CustomField>
    <fullName>CustomField_eLInk__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldnROIy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>