metadata/force-app/main/default/objects/CustomName_RmvFV__c/fields/CustomField_mXRUw__c.field-meta.xml
<CustomField>
    <fullName>CustomField_mXRUw__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfAaNz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>